@@ -1,11 +1,12 @@
 frostwire (5.2.12) stable; urgency=high
   * Improvements in search algorithm.
+  * Send file/folder feature more effective between just 2 peers.
   * Simplification of search form interface, looks similar to FrostWire 4
   * Phone & Tablets tab is gone, integration with Android devices is now
     part of the Library under a "Devices" tree item.
   * Browses, Streams audio, and downloads files made public by Android devices
     in the same network.  
-  * When entering a torrent search hints are shown (powered by Google).
+  * When entering a search hints are shown to type less (powered by Google).
   * Sorts transfers by "Seeds" correctly.
   * Improvements on Library action buttons, now a "Launch" action is available
     and buttons are shown/hidden depending on context.
